make sure orphans dont stretch (#34)
* make sure orphans dont stretch

* fix broken builds

--- a/src/Card.scss
+++ b/src/Card.scss
@@ -20,6 +20,7 @@
   margin: 0 $card-margin $base-spacing $card-margin;
   position: relative;
   transition: all 0.2s ease-in-out;
+  max-width: 320px;
 
   .card-image {
     background-position: top center;
