--- a/src/index.scss
+++ b/src/index.scss
@@ -17,7 +17,7 @@ body {
 .cards {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
   margin: 0 -20px;
 }
 
